Add Rank component

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Courier New", monospace, source-code-pro, Menlo, Monaco,
+    Consolas;
 }
 
 button {
